--- a/src/assets/styles/module/main.scss
+++ b/src/assets/styles/module/main.scss
@@ -317,13 +317,17 @@ $panel-height: 40px;
 
             &.mhwc-equip_bundle_table {
                 input {
-                    margin: 0 5px;
                     padding: 0 5px;
-                    height: 33px;
-                    line-height: 21px;
-                    border: 1px solid #333;
+                    width: 250px;
+                    height: 25px;
+                    line-height: 25px;
+                    border: 1px solid #999;
 
                     @include border-radius(5px);
+                }
+
+                td:nth-child(1) {
+                    width: 250px;
                 }
 
                 td:nth-child(9) {
