1. fix typo 2. update nowrap behavior 3. update gh pages

--- a/src/assets/styles/component/common.scss
+++ b/src/assets/styles/component/common.scss
@@ -151,6 +151,10 @@
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+
+    &:hover {
+        overflow: visible;
+    }
 }
 
 /**
