--- a/src/assets/styles/module/main.scss
+++ b/src/assets/styles/module/main.scss
@@ -129,24 +129,6 @@ $panel-height: 40px;
     }
 }
 
-.mhwc-icon {
-    display: inline-block;
-    margin-left: 2px;
-    width: 20px;
-    height: 20px;
-    float: right;
-    line-height: 20px;
-    text-align: center;
-    color: white;
-    background-color: #ccc;
-
-    @include border-radius(3px);
-
-    &:hover {
-        background-color: #666;
-    }
-}
-
 .mhwc-list {
     overflow-y: scroll;
 
@@ -158,6 +140,31 @@ $panel-height: 40px;
     // &::-webkit-scrollbar-thumb {
     //     background: rgba(0, 0, 0, 0.1);
     // }
+}
+
+.mhwc-icons_bundle {
+    float: right;
+}
+
+.mhwc-functional_icon {
+    display: inline-block;
+    margin-left: 2px;
+
+    a {
+        display: block;
+        width: 20px;
+        height: 20px;
+        line-height: 20px;
+        text-align: center;
+        color: white;
+        background-color: #ccc;
+
+        @include border-radius(3px);
+
+        &:hover {
+            background-color: #666;
+        }
+    }
 }
 
 .mhwc-selector {
@@ -209,7 +216,7 @@ $panel-height: 40px;
             @include border-radius(5px);
         }
 
-        .mhwc-icon {
+        .mhwc-icons_bundle {
             margin-top: 10px;
             margin-right: 5px;
         }
@@ -334,14 +341,6 @@ $panel-height: 40px;
                     padding-right: 5px;
                     text-align: right;
                 }
-
-                .mhwc-icons_bundle {
-                    float: right;
-
-                    .mhwc-icon {
-                        float: none;
-                    }
-                }
             }
 
             .mhwc-sharpness {
@@ -450,14 +449,6 @@ $panel-height: 40px;
 
             .mhwc-name {
                 line-height: 33px;
-
-                .mhwc-icons_bundle {
-                    float: right;
-
-                    .mhwc-icon {
-                        float: none;
-                    }
-                }
             }
 
             .mhwc-value {
@@ -532,14 +523,6 @@ $panel-height: 40px;
 
             .mhwc-name {
                 line-height: 33px;
-
-                .mhwc-icons_bundle {
-                    float: right;
-
-                    .mhwc-icon {
-                        float: none;
-                    }
-                }
             }
 
             .mhwc-value {
@@ -564,7 +547,7 @@ $panel-height: 40px;
 
                 @include nowrap();
 
-                .mhwc-icon {
+                .mhwc-icons_bundle {
                     margin-top: 6.5px;
                 }
             }
@@ -676,14 +659,6 @@ $panel-height: 40px;
 
             .mhwc-name {
                 line-height: 33px;
-
-                .mhwc-icons_bundle {
-                    float: right;
-
-                    .mhwc-icon {
-                        float: none;
-                    }
-                }
             }
 
             .mhwc-value {
@@ -708,7 +683,7 @@ $panel-height: 40px;
 
                 @include nowrap();
 
-                .mhwc-icon {
+                .mhwc-icons_bundle {
                     margin-top: 6.5px;
                 }
             }
@@ -787,7 +762,7 @@ $panel-height: 40px;
 
                 @include nowrap();
 
-                .mhwc-icon {
+                .mhwc-icons_bundle {
                     margin-top: 6.5px;
                 }
             }
