1. udpate react mount point

--- a/src/assets/styles/component/common.scss
+++ b/src/assets/styles/component/common.scss
@@ -222,8 +222,7 @@ a {
         text-decoration: none !important;
     }
 
-    &.ot-active,
-    &:hover
+    &:hover,
     &:focus {
         text-decoration: none !important;
     }
