1. add redux 2. rename assets 3. update style

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -25,6 +25,6 @@ $grid-gutter-width: 0;
 /**
  * Module & Option Style
  */
-#main {
-    @import "module/main";
+#app {
+    @import "module/app";
 }
