--- a/src/assets/styles/module/app.scss
+++ b/src/assets/styles/module/app.scss
@@ -7,6 +7,11 @@
  * @link        https://github.com/scarwu/MHWCalculator
  */
 
+* {
+    transition-property: all;
+    transition-duration: 0.1s;
+}
+
 // Common Components
 .mhwc-functional_icon {
     position: relative;
@@ -167,8 +172,16 @@ $panel-height: 40px;
         height: $header-height;
         line-height: $header-height;
 
-        a {
-            background-color: #999;
+        .mhwc-functional_icon {
+            a {
+                background-color: #999;
+            }
+
+            &:hover {
+                a {
+                    background-color: #666;
+                }
+            }
         }
 
         .mhwc-lang {
@@ -201,6 +214,12 @@ $panel-height: 40px;
 
                     @include font-size(1);
                     @include border-radius(3px);
+                }
+            }
+
+            &:hover {
+                div {
+                    background-color: #666;
                 }
             }
         }
@@ -258,9 +277,18 @@ $panel-height: 40px;
                 height: $section_name-height;
                 line-height: $section_name-height;
 
-                a {
-                    background-color: #999;
+                .mhwc-functional_icon {
+                    a {
+                        background-color: #999;
+                    }
+
+                    &:hover {
+                        a {
+                            background-color: #333;
+                        }
+                    }
                 }
+
             }
         }
     }
