--- a/src/assets/styles/module/app.scss
+++ b/src/assets/styles/module/app.scss
@@ -62,6 +62,46 @@
     }
 }
 
+.mhwc-functional_selector {
+    display: inline-block;
+    margin-left: 2px;
+
+    div {
+        display: block;
+        height: 20px;
+        line-height: 20px;
+        text-align: center;
+        color: white;
+        background-color: #999;
+
+        @include border-radius(3px);
+
+        i {
+            display: inline-block;
+            width: 20px;
+            height: 20px;
+            @include font-size(1.2);
+        }
+
+        select {
+            margin: 0 0;
+            padding: 0;
+            border: none;
+            height: 20px;
+            line-height: 20px;
+
+            @include font-size(1);
+            @include border-radius(3px);
+        }
+    }
+
+    &:hover {
+        div {
+            background-color: #666;
+        }
+    }
+}
+
 .mhwc-sharpness_bar {
     position: relative;
     border: 1px solid black;
@@ -180,46 +220,6 @@ $panel-height: 40px;
 
             &:hover {
                 a {
-                    background-color: #666;
-                }
-            }
-        }
-
-        .mhwc-lang {
-            display: inline-block;
-            margin-left: 2px;
-
-            div {
-                display: block;
-                height: 20px;
-                line-height: 20px;
-                text-align: center;
-                color: white;
-                background-color: #999;
-
-                @include border-radius(3px);
-
-                i {
-                    display: inline-block;
-                    width: 20px;
-                    height: 20px;
-                    @include font-size(1.2);
-                }
-
-                select {
-                    margin: 0 0;
-                    padding: 0;
-                    border: none;
-                    height: 20px;
-                    line-height: 20px;
-
-                    @include font-size(1);
-                    @include border-radius(3px);
-                }
-            }
-
-            &:hover {
-                div {
                     background-color: #666;
                 }
             }
@@ -709,7 +709,7 @@ $panel-height: 40px;
         }
 
         .mhwc-icons_bundle {
-            margin-right: 5px;
+            margin-right: 10px;
 
             .mhwc-functional_icon {
                 a {
@@ -752,7 +752,7 @@ $panel-height: 40px;
         bottom: 0;
 
         .mhwc-wrapper {
-            column-count: 3;
+            column-count: 4;
             column-gap: 0;
             padding: 5px 0;
         }
